test/Fail/Issue394-2.err
Issue394-2.agda:5.42: error: [ParseError]
Malformed syntax declaration: syntax must use binding holes exactly once
